manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openai-deployment
  namespace: default
  labels:
    app: openai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openai
  template:
    metadata:
      labels:
        app: openai
    spec:
      containers:
        - name: openai
          image: ghcr.io/notbjoggisatall/openai:1.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 10001
      imagePullSecrets:
        - name: credentials
---
apiVersion: v1
kind: Service
metadata:
  name: openai-service
spec:
  selector:
    app: openai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 10001
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ai.bjoggis.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: openai-service
                port:
                  number: 80
